--- a/table.css
+++ b/table.css
@@ -9,7 +9,7 @@ h1{
     color:white;
 }
 
-div{
+#Table{
     display: flex;
     justify-content: center;
     font-family: Calibri; 
@@ -18,4 +18,83 @@ div{
 
 table{
     border-radius: 2px;
+}
+
+div{
+    color:rgb(89, 70, 208)
+}
+
+div.container{
+    border: 2px solid rgb(89, 70, 208);
+    border-radius: 5px;
+    background-color:  rgb(224, 219, 249);
+    padding: 10px;
+    margin:10px;
+    width: auto;
+    height: 150px;
+}
+
+div.static{
+    position: static;
+    border: 2px solid rgb(89, 70, 208);
+    border-radius: 2px;
+    background-color: rgb(89, 70, 208);
+    color: white;
+    margin: 10px;
+    width:fit-content;
+    margin-left: 90px;
+}
+
+div.relative{
+    position: relative;
+    border: 2px solid rgb(89, 70, 208);
+    border-radius: 2px;
+    background-color: rgb(89, 70, 208);
+    color: white;
+    right: 20px;
+    margin: 10px;
+    width:fit-content;
+    margin-left: 90px;
+}
+
+div.left{
+    float: left;
+    width:60px;
+    height: 40px;
+    border: 2px solid rgb(89, 70, 208);
+    border-radius: 4px;
+    background-color: rgb(89, 70, 208);
+    color: white;
+    text-align: center;
+}
+
+div.right{
+    float: right;
+    width:60px;
+    height: 40px;
+    border: 2px solid rgb(89, 70, 208);
+    border-radius: 4px;
+    background-color: rgb(89, 70, 208);
+    color: white;
+    text-align: center;
+}
+
+.inline{
+    display: inline;
+    background-color: beige;
+}
+
+.block{
+    display: block;
+    background-color: beige;
+}
+
+.visible{
+    visibility: visible;
+    background-color: beige;
+}
+
+.hidden{
+    visibility: hidden;
+    background-color: beige;
 }
